# sdlc-release-agent

./: README.md  pyproject.toml  sdlc-release-agent.pyproj  sdlc-release-agent.sln
examples/: input.production_deploy.allow.json  input.production_deploy.deny_self_approval.json  input.project_read.deny_cross_project.json  input.project_read.json
sdlc_release_agent/: __init__.py  agent.py  cli.py
tests/: test_agent.py  test_authorization.py  test_integration_opa.py  test_role_policy.py
